--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 body{
-    background-color: #090b30;
+  background: linear-gradient(199deg,#0204cb 0%, #1a07b9 40%, rgba(0,178,255,0.84) 80%);
 
 }
 
