--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 body{
-  background: linear-gradient(199deg,#0204cb 0%, #1a07b9 40%, rgba(0,178,255,0.84) 80%);
+  background: linear-gradient(199deg,#031955 10%, #0e0750 40%, rgba(2, 85, 238, 0.84) 80%);
 
 }
 
@@ -66,6 +66,9 @@ body{
     background-color: rgba(0, 0, 0, 0.397);
   }
 
+  .bg-home{
+    background: linear-gradient(199deg,#000120 0%, #1a07b9 40%, rgba(0,178,255,0.84) 80%);
+  }
 
 
 
