--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,10 @@ body{
     --tw-bg-opacity: 1;
     background-color: rgba(0, 0, 0, 0.397);
   }
-
+  
+  html {
+  scroll-behavior: smooth;
+}
   
 
 
